--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="80"
                 android:ems="10"
-                android:gravity="start|top"
                 android:hint="TypeURL"
-                android:inputType="textMultiLine" />
+                android:inputType="text" />
 
             <Button
                 android:id="@+id/btn"
